--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
     text-align: center;
 }
 .pc-menu svg {
-    width: 80px;
+    width: 60px;
     margin-left: 10px;
     margin-top: 5px;
 }
@@ -33,6 +33,7 @@
     color: white;
     display: block;
 }
-li a {
-    display: block;
+.pc-menu a:hover {
+    background-color:rgba(255,255,255,1);
+    color: black;
 }
