--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,16 @@ html {
 }👈*/
 .top-logo {
     text-align: center;
+    background-image: url("../img/logo-top.png");
+    background-position: center top 50px;
+    background-repeat: no-repeat;
+    background-size: 500px;
+    background-attachment: fixed;
+    width: 100%;
+    height: 600px;
+    position: absolute;
+    z-index: -10;
+    padding-top: 0;
 }
 .back-color {
     /* -webkit-transform: skew(0deg, 5deg); */
@@ -78,6 +88,7 @@ html {
     overflow: hidden;
     margin: 10% 0;
     padding: 80px 0;
+    margin-top: 450px;
 }
 
 .aboutus:before {
@@ -107,9 +118,6 @@ html {
     padding: 100px 10px 120px;
     color: #fff;
 }
-.aboutus_inner h1 {
-    
-}
 .aboutus:after {
     content: '';
     position: absolute;
@@ -118,7 +126,7 @@ html {
     width: 120%;
     height: 80%;
     margin: 3% -10% 0;
-    background: #df6209;
+    background: #1d9cc6;
     -webkit-transform-origin: right center;
     -ms-transform-origin: right center;
     transform-origin: right center;
