--- a/css/index.css
+++ b/css/index.css
@@ -149,7 +149,7 @@ html {
     color: #000000;
 }
 .about-job {
-    height: 400px;
+    height: 300px;
 }
 .about-job h1 {
     margin: 0 auto;
@@ -202,4 +202,64 @@ html {
     border-radius: 50%;
     background-position: center top;
     display: inline-block;
+}
+.outcome {
+    background-color: rgb(227, 227, 227);
+    height: 600px;
+    width: 100%;
+}
+.outcome h1 {
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 50px;
+    border-bottom: 1px black solid;
+    width: 500px;
+    padding-top: 40px;
+}
+.o-inbox {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    /* background-color: #DDC4DD; */
+    text-align: center;
+    margin-top: 40px;
+}
+.o-main {
+    width: 50%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../img/logo-top.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+}
+.o-select {
+    width: 50%;
+    height: 400px;
+}
+.o-main img {
+    width: 50%;
+}
+.o-s-inbox {
+    display: flex;
+    height: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.o-main-text {
+    text-align: left;
+    color: white;
+    /* height: 400px; */
+    width: 100%;
+    line-height: 50px;
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    padding-left: 30px;
 }
