--- a/css/index.css
+++ b/css/index.css
@@ -263,3 +263,83 @@ html {
     margin: 0;
     padding-left: 30px;
 }
+.overview {
+    margin: 0 auto;
+    margin-top: 40px;
+    display: flex;
+    width: 375px;
+    text-align: center;
+    height: 100px;
+    background-color: #011931;
+    color: white;
+}
+.o-img img {
+    height: 100px;
+}
+.o-text {
+    height: 100px;
+    line-height: 100px;
+}
+.o-img {
+    width: 50%;
+    text-align: right;
+}
+.o-text {
+    width: 50%;
+    text-align: center;
+}
+.faq h1 {
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 50px;
+    border-bottom: 1px black solid;
+    width: 500px;
+    padding-top: 40px;
+}
+.faq p {
+    margin-top: 30px;
+    text-align: center;
+}
+footer {
+    margin-top: 70px;
+    background-color: rgb(227, 227, 227);
+    line-height: 40px;
+}
+footer a {
+    color: black;
+    text-decoration: none;
+}
+.f-section1 {
+    width: 100%;
+    display: flex;
+}
+.f-page {
+    width: 33.33333% ;
+    width: -webkit-calc(100% / 3);
+    width: calc(100% / 3);
+    padding-left: 50px;
+    padding-top: 30px;
+}
+.f-section2 {
+    width: 100%;
+    display: flex;
+    padding-bottom: 30px;
+}
+.f-under {
+    padding-top: 50px;
+}
+.writing {
+    width: 70%;
+    padding-left: 50px;
+}
+.f-icon {
+    width: 30%;
+}
+.f-youtube{
+    font-size: 30px;
+    color: black;
+}
+.copyright {
+    border-bottom: 1px black solid;
+    width: 260px;
+}
