今田の大失態を訂正

--- a/css/index.css
+++ b/css/index.css
@@ -180,7 +180,7 @@ html {
     background-image: url("../img/higacoin.png"); 
     /* 変更したい */
     width: 100px;
-    height: 100px;+
+    height: 100px;
     background-size: 250px;
     border-radius: 50%;
     background-position: left top;
