--- a/css/index.css
+++ b/css/index.css
@@ -213,8 +213,8 @@ html {
     display: block;
     position: absolute;
     z-index: 10;
-    transition: all .3s ease;
-    -webkit-transition: all .3s ease;
+    transition: all .4s ease;
+    -webkit-transition: all .2s ease;
 }
 
 .job-a::after {
@@ -230,7 +230,7 @@ html {
     height: 1px;
     right: -1px;
     bottom: -1px;
-    transition-delay: .6s;
+    transition-delay: .2s;
 }
 
 .job-box-in::after {
@@ -238,7 +238,7 @@ html {
     height: 0px;
     left: -1px;
     bottom: -1px;
-    transition-delay: .9s;
+    transition-delay: .2s;
 }
 
 .job-box-in::before {
@@ -299,8 +299,9 @@ html {
     display: inline-block;
 }
 .outcome {
+    /* display: flex; */
     background-color: rgb(227, 227, 227);
-    height: 600px;
+    height: 450px;
     width: 100%;
 }
 .outcome h1 {
@@ -334,18 +335,42 @@ html {
     position: relative;
 }
 .o-select {
-    width: 50%;
+    display: flex;
+    margin: 5px 10px;
+    width: 100%;
     height: 400px;
+    margin: 0 auto;
+}
+.o-select a {
+    width: 100%;
+    margin: 0 auto;
 }
 .o-main img {
     width: 50%;
 }
 .o-s-inbox {
     display: flex;
-    height: 50%;
+    height: 250px;
+    width: calc(140% / 2);
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 1px black solid;
+    margin: 5px;
+    margin: 0 auto;
+}
+.o-s-inbox p { 
+    color: #fff;
+    /* font-size: ; */
+    text-align: center;
+    line-height: 30px;
+    margin-top: 220px;
+    display: block;
+    width: 100%;
+    background-color: #000000;
+}
+.o-select a {
+    text-decoration: none;
 }
 .o-main-text {
     text-align: left;
